# app-distancias

./: .gitignore  .vercelignore  Localidades.xlsx  README.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  pyproject.toml  tsconfig.json
.cache/: distancias.sqlite3
app/: globals.css
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/busqueda/: route.ts
app/api/busqueda-masiva/: route.ts
app/api/centros/: route.ts
app/api/centros/[id]/: route.ts
app/auth/error/: page.tsx
app/auth/login/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/busqueda/: page.tsx
app/dashboard/busqueda-masiva/: page.tsx
app/dashboard/centros/: page.tsx
app_distancias/: cache.py  cli.py  geo.py  models.py  ranking.py  storage.py
app_distancias.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
app_distancias/routing/: base.py  ors.py  osrm.py
components/: BusquedaClient.tsx  BusquedaMasivaClient.tsx  CentrosClient.tsx  Sidebar.tsx
data/: bases.csv
lib/: osrm.ts
lib/supabase/: admin.ts  middleware.ts
webapp/: package-lock.json  package.json
webapp/app/: globals.css  layout.tsx
webapp/app/api/busqueda/: route.ts
webapp/app/api/centros/[id]/: route.ts
webapp/app/auth/login/: page.tsx
webapp/app/dashboard/: layout.tsx
webapp/components/: CentrosClient.tsx
