[project]
name = "app-distancias"
version = "0.1.0"
description = "CLI local para calcular distancias por ruta a bases operativas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
app-distancias = "app_distancias.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app_distancias*"]
